Division definition; clearer sonification definition

--- a/Thesis.tex
+++ b/Thesis.tex
@@ -27,9 +27,16 @@
 \chapter{Sonification and audification experiments}
 
 \section{Thoughts on current state of sonification}
+% What is this chapter gonna be about
 To me, topic of sonification is intriguing for few reasons. First of them could be, that it is a topic benefiting from interest from various groups of scientists and creatives - from biologists, through mathematicians, to musicians and sound artists. Another is a belief, that this topic still has a lot of cloaked potential. I will try to discuss this clash between scientific and artistic approach, various significant projects or artworks, as well as fields of opportunity raising from this duality.
 
-I would like to define two modes of sonification, although generally there is only one definition of the word. Main understanding of the term is usually analytical, \textit{representative}, where it is the ``use of non-speech audio to convey information'' \cite{Fitch}, or as Nick Collins puts it, where one tries to provide ``aural alternatives to pie charts, line graphs and spreadsheets'' \cite{Collins2006}. My addition to the definition is \textit{an artistic mode}, where the main point of the process is not to make certain data accessible for aural analysis, but to use those data as a essence of specific aesthetics. These modes can overlap, but usually the distinction is clear. and analytical mode prevails in quantity.
+% Sonification definition
+Main understanding of the term \textit{sonification} is the `use of non-speech audio to convey information', or more precisely, it is the `transformation of data relations into perceived relations in an acoustic signal for the purposes of facilitating communication or interpretation' \cite{Fitch}. That is a definition made by ICAD (International Community for Auditory Display), which is one of the main organizations in this field. Nicolas Collins puts it less formally, as a method for one to provide `aural alternatives to pie charts, line graphs and spreadsheets' \cite{Collins2006}. All these quotations define it as an analytical, representative point of view, and the reasoning behind the use of sonification in this sense is repositioning of the information from traditional semantic, visual or mathematical level to sonic level giving ground to non-traditional data analysis via medium of sound or music. Interestingly ICAD first definition mentioning conveying \textit{information} rather than data can also give an understanding that sonification is not only about data patterns and whether we try to sonify weather forecast or our emotions is secondary.
+
+% Division proposal
+I would like to propose a division in this definition. There is one part of sonification world, which is described above; that is an analytical, `auditory display' stand. My proposition adds \textit{an artistic stand}, where the main goal of the process is not to make certain data accessible for aural analysis, but rather to use those data as a essence of specific aesthetics. That means, one is no more looking for an scientific tool, but on sonic instrument, source of inspiration and compositional data. Reaching exact, understandable representation of data becomes additional rather than essential.
+
+These modes can overlap, but usually the distinction is clear. and analytical mode prevails in quantity.
 
 \section{Wireless network sonification}
 
