--- a/Thesis copy.tex
+++ b/Thesis copy.tex
@@ -1,4 +1,4 @@
-\documentclass[11pt,a4paper,oneside]{report} 
+\documentclass[ebook,oneside,openany]{memoir} 
 \usepackage[utf8]{inputenc} 
 \usepackage{apacite} 
 \usepackage{cmap} 
@@ -20,7 +20,7 @@ Institute of Sonology}
 
 \tableofcontents
 
-\chapter{Introduction}
+\chapter*{Introduction}
 
 \chapter{Sonification and audification experiments}
 
@@ -59,8 +59,6 @@ Next, I would like to point out few significant works which use sonification as 
 One of the most classic examples of sonification is Geiger counter. Geiger counter is clearly an \textit{analytic} sonification tool, with its main purpose being representation of certain information, rather than using the information as an artistic basis.
 
 Probably closest to my work is the one by Michael Chinen. Michael Chinen is an Dartmouth College graduate, sound artist and one of the developers of popular open source audio editing software Audacity.
-I will try to examine his recent works under label \textit{Algorhytmics}, and in particular two softwares: \textbf{lstn} and \textbf{FuckingWebBrowser}.
-
 
 % His work is representative and direct, yet its main point its not to convey information. Auditory display becomes `useless' from scientific or research point of view and becoomes interesting as an artwork for its specific aesthetics.
 %Sonification of objects using distance sensors.
@@ -73,10 +71,6 @@ The particular part which caught my interest is desire to experiment with the su
 Since main subject of the auditory display is propagation pattern simulation, the authors have decided to use spatialization as key element of representation. As they argue against visual display, \textit{``sonification can be more effective than visualization in such a spatial application because the human auditory system is able to perceive synchronous spatial stimuli from every point within a space, while visual perception is limited to physical range of sight.''} For the purpose, 8 speakers in space are used to provide sufficient clues for the exact propagation pattern.
 
 For the interactive standpoint, custom made drum trigger instruments were created using piezo elements to represent electrical spikes in the system. Performers are asked to hit these in specific way - after first propagation ends, performer placed closest to its ending is bound to start another one, by hitting his own instrument. At this point one could see an interesting connection between \textit{sonification} and \textit{gamification} as very close methods of bringing data streams and system under closer, possibly more understandable examination.
-
-As authors conclude, the method of using almost only spatialization for auditory display purposes was not completely successful, since they noticed that part of performers was using visual representation of the process (provided during event) to orient in the process rather than simply listen to the positioning. 
-
-From the analysis stand point, I see this work as bordering between scientific and artistic approach. The effort to analyze real scientific system combined with use of almost musical methods and instruments seems as interesting way of reaching sonologicaly relevant results. It seems that authors have not seen scientific results as the pure purpose of the work - using (musical) instruments, focus on aesthetics of the 
 
 - spatialization - dimensional propagation of the neural spikes in neural cultures
 
