--- a/Thesis.tex
+++ b/Thesis.tex
@@ -1,13 +1,17 @@
-\documentclass[11pt,a4paper,oneside]{report} 
+\documentclass[12pt,a4paper,oneside]{report} 
 \usepackage[utf8]{inputenc} 
 \usepackage{apacite} 
 \usepackage{cmap} 
 \usepackage{url}
 \usepackage[T1]{fontenc} 
 \usepackage[osf]{libertine} 
-\usepackage[scaled=0.85]{beramono}
+\usepackage[scaled=0.80]{beramono}
 %\PassOptionsToPackage{scaled=0.75}{beramono}
 \usepackage[parfill]{parskip} 
+%\usepackage{hyperref}
+\usepackage{graphicx}
+\usepackage{float}
+
 
 
 \title{Artistic approaches in sonification\\ and other works} 
@@ -77,28 +81,51 @@ Use of streams of data for compositional and sound generating purposes is very f
 
 Next, I would like to point out few significant works which use sonification as its main concept or method, and while doing so, I will try to exercise my proposal for the new sonification definition division.
 
-One of the most classic examples of sonification is \emph{Geiger} (or \emph{Geiger–Müller}) \emph{counter}, particle detector measuring ionizing radiation. Method of display of the information is use of pulses - representations of electrical charges (and consequential dicharges) of the inert gas in the Geiger–Müller tube caused by particles or photons of radiation. Higher amount of electrical discharges (being higher amount of audio pulses coming from speakers) is signaling greater density of particles of radiation, thus higher radiation in the environment. \cite{Knoll2000} Geiger counter is clearly a \emph{analytic} sonification tool, with its main purpose being representation of certain information, rather than using the information as an artistic basis.
+One of the most classic examples of sonification is \emph{Geiger} (or \emph{Geiger–Müller}) \emph{counter}, particle detector measuring ionizing radiation. Method of display of the information is use of pulses - representations of electrical charges (and consequential dicharges) of the inert gas in the Geiger–Müller tube caused by particles or photons of radiation. Higher amount of electrical discharges (being higher amount of audio pulses coming from speakers) is signaling greater density of particles of radiation, thus higher radiation in the environment. \cite{Knoll2010} Geiger counter is clearly a \emph{analytic} sonification tool, with its main purpose being representation of certain information, rather than using the information as an artistic basis.
+
+I have chosen Geiger counter for another reason than simply being ideal representation of scientific and analytic attitude towards sonification. It is also a standalone and portable instrument. This opens up a possibility for its artistic use, even though its design is purely for research purposes. As I suggest later on in subsection discussing my wireless sonification project, I find interest in portable sonification tools for various environmental experiments.
 
 Geiger counter can be also viewed as representation of sub-method of sonification, \emph{audification}. \emph{``Audification is a technique of making sense of data by interpreting any kind of one-dimensional signal (or of a two-dimensional signal-like data set) as amplitude over time and playing it back on a loudspeaker for the purpose of listening.''}(Chapter 12, Sonification Handbook) 
 
 Audification is sonification simplified to most basic level. Most of the common real-time sonifications are than audifications as well, e.g.\ listening to the whale songs or bat echolocation.
 
-One of the most interesting sonification works is work of Christina Kubisch\footnote{I have chosen Christina Kubisch as a icon of a method, but there is a wider spectrum of artists using the same tools.}. Kubisch is focusing on audification of electromagnetic fields with the use of induction coils, headphone amplifiers and headphones. This works as a nice example of artistic audification, where the purpose seems to be in finding of interesting sounds within the world of electromagnetic fields rather than scientific analysis.
+One of the most interesting sonification works is work of Christina Kubisch\footnote{I have chosen Christina Kubisch as a icon of a method, but there is a wider spectrum of artists using the same tools.}. Kubisch is focusing on audification of electromagnetic fields with the use of induction coils, headphone amplifiers and headphones. This works as a nice example of artistic audification, where the purpose seems to be in finding of interesting sounds within the world of electromagnetic fields rather than scientific analysis. 
 
-I have chosen Geiger counter for another reason than simply being ideal representation of scientific and analytic attitude towards sonification. It is also a standalone and portable instrument. This opens up a possibility for its artistic use, even though its design is purely for research purposes. As I suggest later on in subsection discussing my wireless sonification project, I find interest in portable sonification tools for various environmental experiments.
+Induction coils are acting as antennas and natural amplifiers, filters which when in right setting, can provide excellent tools for electromagnetic sensing. AC oscillations of the electromagnetic field are inducted on the coil, thusly creating AC current. This AC current is than amplified and can be directly used with any audio devices.
 
-Probably closest to my work is the one by Michael Chinen\footnote{\url{http://michaelchinen.com}/}. Michael Chinen is an Dartmouth College graduate, sound artist and one of the developers of popular open source audio editing software Audacity.
-I will try to examine his recent works under label \emph{Institute of Algorhytmics}, and in particular two softwares: \textbf{lstn} and \textbf{FuckingWebBrowser}.
+I have designed a simple pocket amplifier for this purposes called \textbf{Eletrosluch} (see ~\ref{fig:elektrosluch}). This device provides 100x gain for the coils and is powerful enough to drive headphones. Its main benefit is the size and portability, ideal for electromagnetic sonic explorations. The version 1.0 (on the picture) used tape head which I have extracted from old tape player as induction coil. Amplifying circuit was based around LM386 amplifier, which I have replaced in v1.1 with low-noise operational amplifier TL071. Tape heads have been replaced with ``pick-up coils'', which were, while attached with its suction cup to telephone headset, used for noise-less recordings of telephone calls in previous century. 
 
-I will shortly explain the way these programs work. Both \emph{lstn} and \emph{FuckingWebBrowser} are based around sonification of computer based streams and data. To be more precise, lstn is \emph{``a program that sonifies real-time debugging data of other programs''} and FuckingWebBrowser is \emph{``simple mac web browser with memory sonification based on WebKit''} \cite{Chinen}. 
+\begin{figure}  
+  \centering
+    \includegraphics[width=0.7\textwidth]{img/elektrosluch}
+	\caption{Elektrosluch 1.0}
+	\label{fig:elektrosluch}
+\end{figure}
 
-These works are quite similar to my work Sonodump\footnote{More information about Sonodump can be found in 2.2 Wireless sonification}. For example, as well as Chinen in FuckingWebBrowser, I also deal with browsing of the internet as analogous action to bowing a violin. Address bar becomes a bow and stream of data (conscious decisions about URLs to type in the address bar) is the angle and pressure of the bow on the strings. 
+Probably closest to my sonificiation work is the one by Michael Chinen\footnote{\url{http://michaelchinen.com}/} and Shintaro Miyazaki's Institute for Algorhytmics\footnote{\url{http://www.algorhythmics.com/en/}}. 
 
-Chinen makes an excellent point for artistic stand towards sonification. Aim towards translating real information towards listener is missing (maybe only to a very experienced one); use of sonification plays a different - artistic - role, rather than the one of auditory display. This role being pure source of data for sound generation, not a source of information meant to be mediated towards audience.
+Michael Chinen is an Dartmouth College graduate, sound artist and one of the developers of popular open source audio editing software Audacity. His artistic focus resides in software sonification, in sense of method as in sense of target. Prove to this claim are his works \textbf{lstn} and \textbf{FuckingWebBrowser}, which I will now try to examine in greater detail. 
+
+Both \emph{lstn} and \emph{FuckingWebBrowser} are based around sonification of computer based streams and data. To be more precise, lstn is \emph{``a program that sonifies real-time debugging data of other programs''} and FuckingWebBrowser is \emph{``simple mac web browser with memory sonification based on WebKit''} \cite{Chinen2010, Chinen2010a}.
+
+These works are quite similar to my work Sonodump\footnote{More information about Sonodump can be found in 2.2 Wireless sonification}. For example, as well as Chinen in FuckingWebBrowser, I also deal with browsing of the internet as with the initial trigger and data stream for sound generation. One might find it as analogous action to e\.g.\, bowing of a violin. Address bar becomes a bow and stream of data (conscious decisions about URLs to type in the address bar) is the angle and pressure of the bow on the strings. 
+
+Chinen makes an excellent point for artistic stand towards sonification. Aim towards translating real information towards listener is missing (maybe only to a very experienced one); use of sonification plays a different, artistic, role, rather than the one of auditory display. This role being pure source of data for sound generation, not a source of information meant to be mediated towards audience.
 
 His work is representative and direct, yet its main point its not to convey information. Auditory display becomes `useless' from scientific or research point of view and becomes interesting as an artwork for its specific aesthetics.
 
-One of the most significant audifications are 
+Chinen's work has been strongly connected to Institute for Algorhytmics, led by Shintaro Miyazaki\footnote{\url{http://www.algorhythmics.com/persons/miyazaki/}}. He is a post-doctoral researcher at Humboldt University in Berlin dealing with \emph{``epistemology, archeology, history and theory of everyday technologies, which store, transmit and process informations and their dynamic relation to sound, rhythms and other sorts of time-varying signals.''} \cite{Miyazaki2012}. From his projects, I want to point out his collaboration with Martin Howse\footnote{\url{http://www.1010.co.uk/}} called \textbf{Detektors}\footnote{\url{http://detektors.org}}.
+
+Detektors is \emph{``an open, collaborative project which uses sonic strategies and DIY-devices to make audible the hidden infoscapes of our time. The present website will show data, recordings and cartographies of different spectral ecologies and trans-sonic machinic agencements.''} \cite{detektors}. Website of the project contains many sound recordings of the electromagnetic fields (audifications) from radio-frequency range as well as cartographic information about such sources. It is a study of electromagnetic pollution, sonic behavior of digital devices in the context of geolocational sound recordings.
+
+\begin{figure}  
+  \centering
+    \includegraphics[width=0.7\textwidth]{img/detektor}
+	\caption{Detektors "Detektor" device}
+	\label{fig:detektor}
+\end{figure}
+
+For ``detection'', specially designed device is used as seen on figure ~\ref{fig:detektor}. Core of the hardware is handy logarithmic detector chip AD8313 produced by Analog Devices. This chip takes AC signals from up to 2.5 GHz  (upper border most used wireless network range is 2.4 Ghz \cite{802}) and demodulates it into audible sphere. This is somehow similar to work of Kubisch, but there is a difference in the frequency spectrum target. Method using induction coils provides us only with electromagnetic AC signal within our hearing range and within the limitations of the amplifying system, but method using demodulator allows us to listen to e.g.\ bluetooth and wireless radio communication. Interestingly, Detektors and Kubisch's work both share emphasis on placing of their sonic discoveries within cartographic space.
 
 %Sonification of objects using distance sensors.
 Another case to study and analyze might be a project of Gil Weinberg called \emph{BrainWaves}. It is based on interactive auditory research of electrical stimuli applied to \emph{in vitro} neuron cultures. I picked the project for the collision of scientific and artistic approach in the work.
@@ -216,7 +243,7 @@ At the beginning of the year, Szelag started a group called Krakow Active Ensamb
 
 In the beginning of 2012, Agnes and I have decided to prepare an installation together. We both have made some works in this field before, but our standpoints were rather different. My main skill is dealing with technical concepts and hers was more of a conceptual and esthetical level - outlook on the work as a whole unit. 
 
-\subsection{Working process} Our basic idea was to implement organic behavior, imitation of processes observed in nature using sound and light. At the beginning, we wanted to place our installation permanently in some abandoned building. After some research and brainstorming, we have changed the plan to create and present installation directly in my apartment. Since I had one extra room which could have been used exactly for this purpose, it became an ideal environment. It is not very often that one has opportunity to work on installation not limited by time or gallery factors.
+\subsection{Working process} Our basic idea was to implement organic behavior, imitation of processes observed in nature using sound and light. We believe, that such methods, when used correctly, can relate to some specific parts of our aesthetic appreciation. At the beginning, we wanted to place our installation permanently in some abandoned building. After some research and brainstorming, we have changed the plan to create and present installation directly in my apartment. Since I had one extra room which could have been used exactly for this purpose, it became an ideal environment. It is not very often that one has opportunity to work on installation not limited by time or gallery factors.
 
 By the end of March, we have slowly started to grasp an idea for specifics of the project. We decided to focus on Fireflies (\emph{Lampyris noctiluca}) and their rhythmic and synchronizing behavior. We didn't wanted to make exact simulation, it was meant to relate to a feeling, or an atmosphere of the situation. For this purpose, I have developed little electronic insects - robots, built from LEDs and vibration motors. Vibration motors were hand-picked from broken cellphones our friends donated to us. 
 
