--- a/general.bib
+++ b/general.bib
@@ -1,58 +1,43 @@
-@article{Weinberg2006,
-author = {Weinberg, G and Thatcher, T},
-file = {:Users/jonas/Documents/Papers/Weinberg, Thatcher/Leonardo Music Journal/Weinberg, Thatcher - 2006 - Interactive Sonification Aesthetics , Functionality and Performance.pdf:pdf},
-journal = {Leonardo Music Journal},
-number = {2006},
-pages = {9--12},
-title = {{Interactive Sonification : Aesthetics , Functionality and Performance}},
-volume = {16},
-year = {2006}
+@misc{Fitch,
+author = {Kramer, Gregory and Walker, Bruce and Bonebright, Terri and Cook, Perry and Flowers, John and Miner, Nadine and Neuhoff, John},
+file = {:Users/Jonas/Library/Application Support/Mendeley Desktop/Downloaded/Kramer et al. - 1999 - The Sonification Report Status of the Field and Research Agenda.html:html},
+keywords = {icad,sonification},
+mendeley-tags = {icad,sonification},
+title = {{The Sonification Report: Status of the Field and Research Agenda}},
+year = {1999}
+}
+@article{Francisco2003,
+author = {Francisco, San and Music, Electronic},
+file = {:Users/Jonas/Documents/Papers/Francisco, Music/Unknown/Francisco, Music - 2003 - East Meets Left Fourth Annual.pdf:pdf},
+pages = {64--77},
+title = {{East Meets Left : Fourth Annual}},
+year = {2003}
 }
 @article{Ballora2004,
 author = {Ballora, Mark and Pennycook, Bruce and Ivanov, PC},
-file = {:Users/jonas/Documents/Papers/Ballora, Pennycook, Ivanov/Leonardo/Ballora, Pennycook, Ivanov - 2004 - Heart Rate Sonification A New Approach to Medical Diagnosis.pdf:pdf},
+file = {:Users/Jonas/Documents/Papers/Ballora, Pennycook, Ivanov/Leonardo/Ballora, Pennycook, Ivanov - 2004 - Heart Rate Sonification A New Approach to Medical Diagnosis.pdf:pdf},
 journal = {Leonardo},
 number = {1},
 pages = {41--46},
 title = {{Heart Rate Sonification: A New Approach to Medical Diagnosis}},
+url = {http://www.mitpressjournals.org/doi/abs/10.1162/002409404772828094},
 volume = {37},
 year = {2004}
 }
-@article{Barrass2006,
-author = {Barrass, Stephen and Whitelaw, M and Bailes, F},
-file = {:Users/jonas/Documents/Papers/Barrass, Whitelaw, Bailes/Leonardo Music Journal/Barrass, Whitelaw, Bailes - 2006 - Listening to the Mind Listening An Analysis of Sonification Reviews, Designs and Correspondences.pdf:pdf},
-journal = {Leonardo Music Journal},
-number = {2006},
-pages = {13--19},
-title = {{Listening to the Mind Listening: An Analysis of Sonification Reviews, Designs and Correspondences}},
-volume = {16},
-year = {2006}
-}
-@article{Pallavi2012,
-author = {Pallavi, Asrodia and Hemlata, Patel},
-file = {:Users/jonas/Documents/Papers/Pallavi, Hemlata/International Journal of Engineering Research and Applications/Pallavi, Hemlata - 2012 - Network Traffic Analysis Using Packet Sniffer.pdf:pdf},
-journal = {International Journal of Engineering Research and Applications},
-keywords = {- packet capture,berkeley packet filter,libpcap,network analyzer,network monitoring,nic,packet,promiscuous mode,traffic analysis},
+@article{Ben-Tal2004,
+author = {Ben-Tal, O and Berger, Jonathan},
+file = {:Users/Jonas/Documents/Papers/Ben-Tal, Berger/Leonardo/Ben-Tal, Berger - 2004 - Creative Aspects of Sonification.pdf:pdf},
+journal = {Leonardo},
 number = {3},
-pages = {854--856},
-title = {{Network Traffic Analysis Using Packet Sniffer}},
-volume = {2},
-year = {2012}
-}
-@article{Bodle2006,
-author = {Bodle, C},
-file = {:Users/jonas/Documents/Papers/Bodle/Leonardo Music Journal/Bodle - 2006 - Sonification Listening Up.pdf:pdf},
-journal = {Leonardo Music Journal},
-number = {2006},
-pages = {51--52},
-title = {{Sonification / Listening Up}},
-url = {http://www.mitpressjournals.org/doi/abs/10.1162/lmj.2006.16.51},
-volume = {16},
-year = {2006}
+pages = {229--232},
+title = {{Creative Aspects of Sonification}},
+url = {http://www.mitpressjournals.org/doi/abs/10.1162/0024094041139427},
+volume = {37},
+year = {2004}
 }
 @article{Polli2005a,
 author = {Polli, Andrea},
-file = {:Users/jonas/Documents/Papers/Polli/Leonardo/Polli - 2005 - Atmospherics Weather Works Data Spatialized Meteorological Sonification Project.pdf:pdf},
+file = {:Users/Jonas/Library/Application Support/Mendeley Desktop/Downloaded/Polli - 2005 - Atmospherics Weather Works Data Spatialized Meteorological Sonification Project.pdf:pdf},
 journal = {Leonardo},
 number = {1},
 pages = {31--36},
@@ -62,7 +47,7 @@ year = {2005}
 }
 @article{Sturm2005,
 author = {Sturm, BL},
-file = {:Users/jonas/Documents/Papers/Sturm/Leonardo/Sturm - 2005 - Pulse of an Ocean Sonification of Ocean Buoy Data.pdf:pdf},
+file = {:Users/Jonas/Library/Application Support/Mendeley Desktop/Downloaded/Sturm - 2005 - Pulse of an Ocean Sonification of Ocean Buoy Data.pdf:pdf},
 journal = {Leonardo},
 number = {2},
 pages = {143--149},
@@ -73,75 +58,112 @@ year = {2005}
 }
 @article{Collins2006,
 author = {Collins, N},
-file = {:Users/jonas/Documents/Papers/Collins/Leonardo Music Journal/Collins - 2006 - Noises Off Sound Beyond music.pdf:pdf},
+file = {:Users/Jonas/Documents/Papers/Collins/Leonardo Music Journal/Collins - 2006 - Noises Off Sound Beyond music.pdf:pdf},
 journal = {Leonardo Music Journal},
 pages = {7--8},
 title = {{Noises Off: Sound Beyond music}},
 volume = {16},
 year = {2006}
 }
-@book{Hermann2011,
-author = {Hermann, T and Hunt, A and Neuhoff, JG},
-file = {:Users/jonas/Documents/Papers/Hermann, Hunt, Neuhoff/Unknown/Hermann, Hunt, Neuhoff - 2011 - The Sonification Handbook.pdf:pdf},
-isbn = {9783832528195},
-title = {{The Sonification Handbook}},
-year = {2011}
-}
-@article{Nikolaidis2012,
-author = {Nikolaidis, Ryan and Walker, Bruce and Weinberg, Gil},
-file = {:Users/jonas/Documents/Papers/Nikolaidis, Walker, Weinberg/Computer Music Journal/Nikolaidis, Walker, Weinberg - 2012 - Generative musical tension modeling and its application to dynamic sonification.pdf:pdf},
-journal = {Computer Music Journal},
-pages = {55--64},
-title = {{Generative musical tension modeling and its application to dynamic sonification}},
-url = {http://www.mitpressjournals.org/doi/abs/10.1162/COMJ\_a\_00105},
-year = {2012}
-}
-@article{Vickers2006,
-author = {Vickers, Paul and Hogg, B},
-file = {:Users/jonas/Documents/Papers/Vickers, Hogg/International Conference on Auditory Display/Vickers, Hogg - 2006 - Sonification Abstraite Sonification Concrete an ‘ \AE sthetic Perspective Space ’ for classifying Auditory Displays in the Ars Musica Domain.pdf:pdf},
-journal = {International Conference on Auditory Display},
-pages = {210--216},
-title = {{Sonification Abstraite / Sonification Concrete : an ‘ \AE sthetic Perspective Space ’ for classifying Auditory Displays in the Ars Musica Domain}},
+@article{Barrass2006,
+author = {Barrass, Stephen and Whitelaw, M and Bailes, F},
+file = {:Users/Jonas/Documents/Papers/Barrass, Whitelaw, Bailes/Leonardo Music Journal/Barrass, Whitelaw, Bailes - 2006 - Listening to the Mind Listening An Analysis of Sonification Reviews, Designs and Correspondences.pdf:pdf},
+journal = {Leonardo Music Journal},
+number = {2006},
+pages = {13--19},
+title = {{Listening to the Mind Listening: An Analysis of Sonification Reviews, Designs and Correspondences}},
+url = {http://www.mitpressjournals.org/doi/abs/10.1162/lmj.2006.16.13},
+volume = {16},
 year = {2006}
-}
-@misc{Fitch,
-author = {Kramer, Gregory and Walker, Bruce and Bonebright, Terri and Cook, Perry and Flowers, John and Miner, Nadine and Neuhoff, John},
-file = {:Users/jonas/Documents/Papers/Kramer et al/Unknown/Kramer et al. - 1999 - The Sonification Report Status of the Field and Research Agenda.html:html},
-keywords = {icad,sonification},
-mendeley-tags = {icad,sonification},
-title = {{The Sonification Report: Status of the Field and Research Agenda}},
-year = {1999}
 }
 @article{Polli2006,
 author = {Polli, A},
-file = {:Users/jonas/Documents/Papers/Polli/Leonardo Music Journal/Polli - 2006 - Heat and the Heartbeat of the City Sonifying Data Describing Climate Change.pdf:pdf},
+file = {:Users/Jonas/Library/Application Support/Mendeley Desktop/Downloaded/Polli - 2006 - Heat and the Heartbeat of the City Sonifying Data Describing Climate Change.pdf:pdf},
 journal = {Leonardo Music Journal},
 pages = {44--45},
 title = {{Heat and the Heartbeat of the City : Sonifying Data Describing Climate Change}},
 volume = {16},
 year = {2006}
 }
-@article{Francisco2003,
-author = {Francisco, San and Music, Electronic},
-file = {:Users/jonas/Documents/Papers/Francisco, Music/Unknown/Francisco, Music - 2003 - East Meets Left Fourth Annual.pdf:pdf},
-pages = {64--77},
-title = {{East Meets Left : Fourth Annual}},
-year = {2003}
+@article{Weinberg2006,
+author = {Weinberg, G and Thatcher, T},
+file = {:Users/Jonas/Library/Application Support/Mendeley Desktop/Downloaded/Weinberg, Thatcher - 2006 - Interactive Sonification Aesthetics , Functionality and Performance.pdf:pdf},
+journal = {Leonardo Music Journal},
+number = {2006},
+pages = {9--12},
+title = {{Interactive Sonification : Aesthetics , Functionality and Performance}},
+volume = {16},
+year = {2006}
 }
-@article{Ben-Tal2004,
-author = {Ben-Tal, O and Berger, Jonathan},
-file = {:Users/jonas/Documents/Papers/Ben-Tal, Berger/Leonardo/Ben-Tal, Berger - 2004 - Creative Aspects of Sonification.pdf:pdf},
-journal = {Leonardo},
+@article{Vickers2006,
+author = {Vickers, Paul and Hogg, B},
+file = {:Users/Jonas/Library/Application Support/Mendeley Desktop/Downloaded/Vickers, Hogg - 2006 - SONIFICATION ABSTRAITE SONIFICATION CONCR ETE AN ‘ \AE STHETIC PERSPECTIVE SPACE ’ FOR CLASSIFYING AUDITORY DISPLAYS IN THE ARS MUSICA DOMAIN.pdf:pdf},
+journal = {International Conference on Auditory Display ( \ldots},
+pages = {210--216},
+title = {{Sonification Abstraite / Sonification Concr Ete : an ‘ \AE sthetic Perspective Space ’ for Classifying Auditory Displays in the Ars Musica Domain}},
+year = {2006}
+}
+@article{Bodle2006,
+author = {Bodle, C},
+file = {:Users/Jonas/Documents/Papers/Bodle/Leonardo Music Journal/Bodle - 2006 - Sonification Listening Up.pdf:pdf},
+journal = {Leonardo Music Journal},
+number = {2006},
+pages = {51--52},
+title = {{Sonification / Listening Up}},
+url = {http://www.mitpressjournals.org/doi/abs/10.1162/lmj.2006.16.51},
+volume = {16},
+year = {2006}
+}
+@book{Knoll2010,
+author = {Knoll, GF},
+file = {:Users/Jonas/Documents/Papers/Knoll/Unknown/Knoll - 2000 - Radiation Detection and Measurement, Third edition.pdf:pdf},
+title = {{Radiation Detection and Measurement}},
+year = {2010}
+}
+@misc{Chinen2010,
+author = {Chinen, Michael},
+title = {{FuckingWebBrowser}},
+url = {http://michaelchinen.com/fuckingwebbrowser/},
+urldate = {March 23, 2013},
+year = {2010}
+}
+@misc{Chinen2010a,
+author = {Chinen, Michael},
+title = {{Listen to your computer: lstn}},
+url = {http://michaelchinen.com/2010/12/09/listen-to-your-computer-lstn/},
+urldate = {March 23, 2013},
+year = {2010}
+}
+@book{Hermann2011,
+author = {Hermann, T and Hunt, A and Neuhoff, JG},
+file = {:Users/Jonas/Documents/Papers/Hermann, Hunt, Neuhoff/Unknown/Hermann, Hunt, Neuhoff - 2011 - The Sonification Handbook.pdf:pdf},
+isbn = {9783832528195},
+title = {{The Sonification Handbook}},
+year = {2011}
+}
+@article{Pallavi2012,
+author = {Pallavi, Asrodia and Hemlata, Patel},
+file = {:Users/Jonas/Library/Application Support/Mendeley Desktop/Downloaded/Pallavi, Hemlata - 2012 - Network Traffic Analysis Using Packet Sniffer.pdf:pdf},
+journal = {International Journal of Engineering Research and Applications},
+keywords = {- packet capture,berkeley packet filter,libpcap,network analyzer,network monitoring,nic,packet,promiscuous mode,traffic analysis},
 number = {3},
-pages = {229--232},
-title = {{Creative Aspects of Sonification}},
-url = {http://www.mitpressjournals.org/doi/abs/10.1162/0024094041139427},
-volume = {37},
-year = {2004}
+pages = {854--856},
+title = {{Network Traffic Analysis Using Packet Sniffer}},
+volume = {2},
+year = {2012}
+}
+@article{Nikolaidis2012,
+author = {Nikolaidis, Ryan and Walker, Bruce and Weinberg, Gil},
+file = {:Users/Jonas/Library/Application Support/Mendeley Desktop/Downloaded/Nikolaidis, Walker, Weinberg - 2012 - Generative musical tension modeling and its application to dynamic sonification.pdf:pdf},
+journal = {Computer Music Journal},
+pages = {55--64},
+title = {{Generative musical tension modeling and its application to dynamic sonification}},
+url = {http://www.mitpressjournals.org/doi/abs/10.1162/COMJ\_a\_00105},
+year = {2012}
 }
 @article{Gibson2012,
 author = {Gibson, John},
-file = {:Users/jonas/Documents/Papers/Gibson/Leonardo Music Journal/Gibson - 2012 - sLowlife Sonification of Plant Study Data.pdf:pdf},
+file = {:Users/Jonas/Documents/Papers/Gibson/Leonardo Music Journal/Gibson - 2012 - sLowlife Sonification of Plant Study Data.pdf:pdf},
 journal = {Leonardo Music Journal},
 number = {2006},
 pages = {42--44},
@@ -149,19 +171,21 @@ title = {{sLowlife: Sonification of Plant Study Data}},
 volume = {16},
 year = {2012}
 }
-@misc{Knoll2000,
-author = {Knoll, Glenn F.},
-file = {:Users/jonas/Documents/Papers/Knoll/Unknown/Knoll - 2000 - Radiation Detection and Measurement, Third edition.pdf:pdf},
-publisher = {John Wiley and sons},
-title = {{Radiation Detection and Measurement, Third edition}},
-year = {2000}
+@misc{Miyazaki2012,
+author = {Miyazaki, Shintaro},
+title = {{Shintaro Miyazaki}},
+url = {http://www.algorhythmics.com/persons/miyazaki/},
+urldate = {March 23, 2013},
+year = {2012}
 }
-
-@webpage{Chinen,
-Lastchecked = {March 9, 2013},
-Title = {Listen to your computer: lstn},
-url = {http://michaelchinen.com/2010/12/09/listen-to-your-computer-lstn/},
-Bdsk-Url-1 = {http://michaelchinen.com/2010/12/09/listen-to-your-computer-lstn/}
+@misc{802,
+booktitle = {Wikipedia},
+title = {{IEEE 802.11}},
+url = {http://en.wikipedia.org/wiki/IEEE\_802.11},
+urldate = {March 23, 2013}
 }
-
-
+@misc{detektors,
+title = {{Detektors}},
+urldate = {March 23, 2013},
+year = {2010}
+}
