--- a/Thesis.tex
+++ b/Thesis.tex
@@ -11,10 +11,15 @@
 %\usepackage{hyperref}
 \usepackage{graphicx}
 \usepackage{float}
+%p\usepackage{setspace}
+%\onehalfspacing
+
+%\usepackage[style=apa,backend=biber]{biblatex}
+%\addbibresource{general.bib}
 
 
 
-\title{Artistic approaches in sonification\\ and other works} 
+\title{Streams and currents:\\Wireless network sonification and other works} 
 \author{Jonáš Gruska\\
 Bachelor's Thesis\\
 Institute of Sonology} 
@@ -51,8 +56,7 @@ Institute of Sonology}
 
 % What is this chapter gonna be about
 
-Topic of sonification is intriguing for few reasons. First of them could be, that it benefits from interest from various groups of people, scientists - from biologists, through mathematicians, creatives - from musicians and sound artists and general public. Another is a belief, that this topic still has a lot of unrevealed potential. I will try to discuss this clash between scientific and artistic approach, various significant projects or artworks, as well as fields of opportunity blossoming from this duality.
-
+Topic of sonification is intriguing for few reasons. First of them could be, that it benefits from interest of various groups of people - scientists: biologists, mathematicians, creatives: musicians, sound artists and general public. Another is a belief, that this topic still has a lot of unrevealed potential. I will try to discuss this clash between scientific and artistic approach, various significant projects or artworks, as well as fields of opportunity blossoming from this duality.
 
 % Sonification definition
 Main understanding of the term \emph{sonification} is the \emph{``use of non-speech audio to convey information''}, or more precisely, it is the \emph{``transformation of data relations into perceived relations in an acoustic signal for the purposes of facilitating communication or interpretation''} \cite{Fitch}. These are definitions from probably the most relevant place to sonificication - International Community for Auditory Display, which organizes conferences and publishes books on the topic since 1992.
@@ -60,10 +64,12 @@ Main understanding of the term \emph{sonification} is the \emph{``use of non-spe
 %That is a definition made by ICAD (International Community for Auditory Display), which is one of the main research organizations in the field organizing annual International Conference for Auditory Display.
 Nicolas Collins puts it less formally, as a method for one to provide \emph{``aural alternatives to pie charts, line graphs and spreadsheets''} \cite{Collins2006}. All these quotations define it as an analytical, representative point of view, and the reasoning behind the use of sonification in this sense is repositioning of the information from traditional semantic, visual or statistic level to sonic level giving ground to non-traditional data analysis via medium of sound or music. Interestingly, ICAD's first definition mentioning conveying \emph{information} rather than data can also give an understanding that sonification is not only about data patterns; and whether we try to sonify weather forecast, biological systems or our emotions is secondary.
 
-% Division proposal
-I would like to propose a division in this definition. There is one part of sonification world, described above - that is an analytical, `auditory display' stand. My proposition adds \emph{an artistic stand}, where the main goal of the process is not to make certain data accessible for aural analysis, but rather to use those data as a essence of specific aesthetics. That means, one is no more looking for an scientific tool, but on a sonic instrument, source of inspiration and compositional data. It might as well be described as a matter of aim behind the use of sonification methods in his work: whether works are aimed to inform a listener or provide him and auditory display of some data, or sonification is used for its characteristic aesthetics.
+I believe the analytical approach towards sonification is rather clear and well defined. Books such as Sonification Handbook prove that ICAD and its fellow researchers have done exquisite work in examining of the topic from various points, resulting in apparatus allowing us, artists to built upon. Although arts and sciences have many things in common, it happens so that aesthetic approaches toward sonification projects are in my opinion quite different.
 
-Some scientists residing on the analytical side are concerned with addition of music grammar and finesse, because it might get in the way of the data representation, \emph{``the music would be another language to learn''} \cite{Vickers2006}.
+%Some scientists residing on the analytical side are concerned with addition of music grammar and finesse, because it might get in the way of the data representation, \emph{``the music would be another language to learn''} \cite{Vickers2006}.
+
+% Division proposal
+That is why I would like to propose a division in this definition. There is one part of sonification world, described above - that is an analytical, `auditory display' stand. My proposition adds \emph{an artistic stand}, where the main goal of the process is not to make certain data accessible for aural analysis, but rather to use those data as a essence of specific aesthetics. That means, one is no more looking for an scientific tool, but on a sonic instrument, source of inspiration and compositional data. It might as well be described as a matter of aim behind the use of sonification methods in his work: whether works are aimed to inform a listener or provide him and auditory display of some data, or sonification is used for its characteristic aesthetics.
 
 Use of streams of data for compositional and sound generating purposes is very familiar to electro-acoustic composers, artists and performers. Sonification in artistic stand is pushing the idea a little further - instead of algorithms, `real world' data are used, although reaching their exact, understandable representation becomes additional or even insignificant rather than essential.
 
@@ -79,7 +85,7 @@ Use of streams of data for compositional and sound generating purposes is very f
 
 %SNIPPETS:\\*
 
-Next, I would like to point out few significant works which use sonification as its main concept or method, and while doing so, I will try to exercise my proposal for the new sonification definition division.
+Now, I would like to point out few significant works which use sonification as its main concept or method, and while doing so, I will try to exercise my proposal for the new sonification definition division.
 
 One of the most classic examples of sonification is \emph{Geiger} (or \emph{Geiger–Müller}) \emph{counter}, particle detector measuring ionizing radiation. Method of display of the information is use of pulses - representations of electrical charges (and consequential dicharges) of the inert gas in the Geiger–Müller tube caused by particles or photons of radiation. Higher amount of electrical discharges (being higher amount of audio pulses coming from speakers) is signaling greater density of particles of radiation, thus higher radiation in the environment. \cite{Knoll2010} Geiger counter is clearly a \emph{analytic} sonification tool, with its main purpose being representation of certain information, rather than using the information as an artistic basis.
 
@@ -93,7 +99,7 @@ One of the most interesting sonification works is work of Christina Kubisch\foot
 
 Induction coils are acting as antennas and natural amplifiers, filters which when in right setting, can provide excellent tools for electromagnetic sensing. AC oscillations of the electromagnetic field are inducted on the coil, thusly creating AC current. This AC current is than amplified and can be directly used with any audio devices.
 
-I have designed a simple pocket amplifier for this purposes called \textbf{Eletrosluch} (see ~\ref{fig:elektrosluch}). This device provides 100x gain for the coils and is powerful enough to drive headphones. Its main benefit is the size and portability, ideal for electromagnetic sonic explorations. The version 1.0 (on the picture) used tape head which I have extracted from old tape player as induction coil. Amplifying circuit was based around LM386 amplifier, which I have replaced in v1.1 with low-noise operational amplifier TL071. Tape heads have been replaced with ``pick-up coils'', which were, while attached with its suction cup to telephone headset, used for noise-less recordings of telephone calls in previous century. 
+I have designed a simple pocket amplifier for this purposes called \textbf{Eletrosluch} (see ~\ref{fig:elektrosluch}). This device provides 100x gain for the coils and is powerful enough to drive headphones. Its main benefit is the size and portability, ideal for electromagnetic sonic explorations. The version 1.0 (on the picture) used tape head which I have extracted from old tape player as induction coil. Amplifying circuit was based around LM386 amplifier, which I have replaced in v1.1 with low-noise operational amplifier TL071. Tape heads have been replaced with \emph{pick-up coils}, which were, while attached with its suction cup to telephone headset, used for noise-less recordings of telephone calls in previous century. 
 
 \begin{figure}  
   \centering
@@ -102,7 +108,7 @@ I have designed a simple pocket amplifier for this purposes called \textbf{Eletr
 	\label{fig:elektrosluch}
 \end{figure}
 
-Probably closest to my sonificiation work is the one by Michael Chinen\footnote{\url{http://michaelchinen.com}/} and Shintaro Miyazaki's Institute for Algorhytmics\footnote{\url{http://www.algorhythmics.com/en/}}. 
+Probably closest to my network sonificiation work is the one by Michael Chinen\footnote{\url{http://michaelchinen.com}/} and Shintaro Miyazaki's Institute for Algorhytmics\footnote{\url{http://www.algorhythmics.com/en/}}. 
 
 Michael Chinen is an Dartmouth College graduate, sound artist and one of the developers of popular open source audio editing software Audacity. His artistic focus resides in software sonification, in sense of method as in sense of target. Prove to this claim are his works \textbf{lstn} and \textbf{FuckingWebBrowser}, which I will now try to examine in greater detail. 
 
@@ -263,7 +269,8 @@ The whole installation was set up, as mentioned, in my apartment. Core of the sy
 
 \chapter{Conclusion}
 
-\bibliographystyle{apacite} 
+\textbf{}\bibliographystyle{apacite} 
 \bibliography{general}
+%\printbibliography
 
 \end{document} 
