--- a/Thesis.tex
+++ b/Thesis.tex
@@ -44,6 +44,7 @@ Institute of Sonology}
 
 
 \chapter*{Acknowledgements}
+I would like to thank my parents for supporting me during my studies. I would never be able to learn what I love without them. And of course, I would like to thank my mentor Paul Berg for his patience with my chaotic behavior and the whole Institute of Sonology for helping me to become who I want to be. Last, I would like to thank Marko Uzunovski, Xavier de Wannemaeker, Maya Verlaak, Daniel Tóth, Peter Sych, Marek Chołoniewski and all my other friends in supporting me in my work, inspiring and pushing me forward.
 
 \setcounter{tocdepth}{1}
 \tableofcontents
@@ -208,6 +209,13 @@ I have performed only once in this setup. As mentioned, it was on AudioArt festi
 
 To elaborate a bit more, I have always been intrigued by welding and atmosphere it creates. Soundworld of welding machine was actually quite matching to soundworld of my wireless sonification software, but that wasn't the main reason behind use of such different instrument. From the beginning, I aimed to build some kind of a sculpture, and 4 days before the performance, it still was not ready. Plan for the object was to create a pyramid from metallic rods, which would serve as representation of antenna, \textit{prism for streams}. So I decided to built one, during the performance, with the use of welding machine.
 
+\begin{figure}  
+  \centering
+    \includegraphics[width=0.9\textwidth]{img/zvarac}
+	\caption{Sonodump performance}
+	\label{fig:zvarac}
+\end{figure}
+
 I was not experienced welder at all, I have welded only two times in my life before the performance. This was suppose to scare me, but it only drive me further - I achieved all the necessary protection and started to experiment (the day before). Interesting note might be, that the venue had to change their IGBT breakers in the power grid for higher current draws, because of my performance.
 
 During the performance, welding did a terrific job on creating two things. First being the atmosphere - smell of hot metals, crackling and sizzling of the electric current are simply wonderful and spectacular. When I talked to the people from the audience after the performance, many have mentioned the connection to the welding happening `on the streets'. Every one has few experiences with welders and the bright light of the process, which actually connects to the second aspect I managed to create. 
@@ -221,10 +229,12 @@ Second project is not realized yet, but connects my idea of wireless sonificatio
 
 \begin{figure}  
   \centering
-    \includegraphics[width=0.9\textwidth]{img/hlysnan}
-	\caption{Hlysnan v0.1 - reinventing of the sonodump}
+    \includegraphics[width=0.8\textwidth]{img/hlysnan}%
+	\caption{Hlysnan v0.1 - reinventing the sonodump}
 	\label{fig:hlysnan}
 \end{figure}
+
+\clearpage
 
 \section{City attributes sonification}
 
@@ -293,6 +303,13 @@ As expected, sound was behaving oddly and quickly conquered the whole room. Judg
 
 Second event mentioned, contrasting to small studio performance, is \emph{Sonology Discussion Concert} presented in Arnold Schoenbergzaal of Royal Conservatory in The Hague. Arnold Schoenbergzall is spacious concert hall designed for larger events of various genres of music. For my years at Sonology, it has been a home to most of Sonology concerts. It was a special moment for me to finally present my work in such place and I treated it with adequate dignity.
 
+\begin{figure}  
+  \centering
+    \includegraphics[width=0.9\textwidth]{img/binmatu_perfo}
+	\caption{Binmatu performance in Studio Loos}
+	\label{fig:binmatu_perfo}
+\end{figure}
+
 I have once again benefited from quad-speaker setup, and this time the order of rear speakers wasn't reversed. It has been quite successful in its realization. There were some minor disturbances with distortion of the speakers / mixing console at few points, but in the end I was satisfied with results. Hall provided sufficient ground for the grandiosity of certain pieces and previously described ``impulse'' piece had enormous impact because of the natural reverberation, which haven't smothered transients, yet allowed blossoming of impulse responses.
 
 \subsection{Conclusion} Binmatu is still ongoing project. Over the course of year and a half, it has developed from uncertain coasts of self-searching vocal performance to clean and direct \emph{digitalism}. I still see myself with lack of expertise in performative aspect of the performance. I feel I need to research more art works dealing with ``musical spirituality'', ways of reaching deep into human mind, further than simple emotions, through medium of sound. After one of the performances, one composer studying classical composition in Bratislava, Slovakia came to me and said that he had very strange experience. He told me, that he has ``been places and remembered things which he believed were long forgotten''. I view it as beautiful compliment, especially, because at that point I knew I am not alone who perceives the psyche-delic (I choose to divide this word to embrace its original meaning) energy stored within these simple sounds. Other compliment I want to point out was from a girl, which pronounced, that she wasn't able to focus on any music after my performance. It worked as some kind of special spell which simply didn't let her to concentrate and listen during the rest of festival. I found it quite beautiful, I was astonished that my pieces can reach such levels of impact. How far can I possibly reach?
@@ -314,7 +331,14 @@ By the end of March, we have slowly started to grasp an idea for specifics of th
 
 The part of main technical concept became to insert these (in the end 10) little robots into various jars in a way, that they hit the glass with their bodies when turned on. This resulted in very cricket-like sound, since the vibration motors behave a little like wings of an insect, especially when turned on in short (one or two second) bursts. This triggered our inspiration and we have started to create various sequences with computer and Arduino board. Using a sequencing patch I specially made for this purpose, we have been able to work with these robots as with any other MIDI instrument.
 
-Last technical detail is, that in the end, the whole system was running without a normal computer, but from a circuit I have designed specifically for this process. This made it possible to make the whole core of the installation very small, transportable and easy to operate.
+\begin{figure}  
+  \centering
+    \includegraphics[width=0.9\textwidth]{img/phasolume}
+	\caption{Custom designed circuit for Phasolume}
+	\label{fig:phasolume}
+\end{figure}
+
+Last technical detail is, that in the end, the whole system was running without a normal computer, but from a circuit I have designed specifically for this process (see ~\ref{fig:phasolume}). This made it possible to make the whole core of the installation very small, transportable and easy to operate.
 
 \subsection{Concept and execution} After the more technical part was finished, we started to focus more on the sequencing and general aesthetics of the installation. This has ended up in decision leaving preprogrammed (or precomposed) sequences and thinking more in a level of a generative algorithm. 
 
@@ -352,6 +376,13 @@ Visually, the installation was very minimalistic - bare metallic plates emitting
 \subsection{Performances}
 
 I have performed with the installation 5 times, for various groups of people. First performances were happening during Hoogtij event, which turned out to be unfortunate. The crowds and delicate sound installations simply do not come together as a good match and I had ask people to be quite many times to make my work audible. Luckily the last three performances after unsuccessful two went quite successfully, one even having a very positive review at local art blog\footnote{http://jegensentevens.nl/2013/03/de-frequentie-van-materiaal/}.
+
+\begin{figure}  
+  \centering
+    \includegraphics[width=0.9\textwidth]{img/sitespec}
+	\caption{Site specific resonances performance}
+	\label{fig:sitespec}
+\end{figure}
 
 Clear message from these works is to prepare the audience as much as possible for what is being presented, otherwise the subtle details which I base my work on go unnoticed, unexperienced - thus worthless. It gave me a lot of inspiration for further projects, and I have been asked by the director of the gallery to come again to create something new for their spaces.
 
